# multiport-usb-power-calculator

./: .env_sample  LICENSE  pyproject.toml
src/: __init__.py
src/data/: data.json
src/static/css/: product.css  results.css  style.css
src/static/js/: product.js  search.js
src/templates/: product.html  results.html  search.html
src/views/: main_views.py
