[project]
name = "multiport-usb-power-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "HyeonsuRyu",email = "hsoo112149@gmail.com"}
]
readme = "README.md"
requires-python = "3.14.2"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "gunicorn (>=25.0.0,<26.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "multiport_usb_power_calculator" }
]
